WebCore/platform/network/win/NetworkStateNotifierWin.cpp
@@ -88,6 +88,10 @@ void NetworkStateNotifier::callAddressChanged(void* context)
 
 void CALLBACK NetworkStateNotifier::addrChangeCallback(void* context, BOOLEAN timedOut)
 {
+    // NotifyAddrChange only notifies us of a single address change. Now that we've been notified,
+    // we need to call it again so we'll get notified the *next* time.
+    static_cast<NetworkStateNotifier*>(context)->registerForAddressChange();
+
     callOnMainThread(callAddressChanged, context);
 }
 
